# LynxAligner

./: Cargo.toml  readme.md
src/: aligner.rs  lib.rs
