[package]
name = "lynxaligner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lynxaligner"
path = "src/lib.rs"

[[bin]]
name = "lynxaligner"
path = "src/bin/main.rs"

[dependencies]
bio="1.*"
lazy_static="*"
debruijn = "*"
itertools = "*"
serde = "*"
